15 Mar 2010 Expanded w32util hosting information when using VS2008 and MS SDK 7.0
            Code will not expand if less than VS2008. If VS2008 is used, then
            MS SDK 7.0 must be installed. Updates to winNT.h are in MS SDK 7.0 for
            Windows 7 and Windows Server 2008 R2. 
15 Mar 2010 Message cleanup, change CPUxxxx to CPxx where CP is the indicated 
            processor type. CP, CF, AP, IL and IP. "IE" is used to indicate SIE 
            keeping message similar. 
11 Mar 2010 Correct cckddasd merge flag error. Correct fbadasd sf= filename error.
10 Mar 2010 Add SIGTERM handler to cleanly shut down clients - Frans Pop
16 Feb 2010 Fix Conditional SSKE failing with Storage Key Assist - Ivan Warren
04 Feb 2010 Fix building on 64-bit Macs under Snow Leopard - Jay Maynard
16 Dec 2009 Fix S/370 SIE guests - Ivan Warren
14 Jun 2009 uptime command - Fish
14 Jun 2009 Support expanded storage sizes exceeding 4GB (64-bit only) - Roger Bowler
05 Jun 2009 Visual Studio 2008 + makefile.bat x64 & runjobs support - Fish
02 Jun 2009 Miscellaneous minor hetget fixes - kerravon86 by Fish
02 Jun 2009 Configuration Topology Facility support for PTF and STSI - Fish
01 Jun 2009 socket printer support - Fish
01 Jun 2009 New TT32 pre-v3.3 header and stats - Fish
01 Jun 2009 Fix OMA (TDF) unloaded tape open bug - kerravon86 by Fish
01 Jun 2009 Support for non-default Windows tape device names - Fish
01 Jun 2009 Fix tape file extension neutrality special case - Fish
15 May 2009 Add 3705 device - Jay Maynard, for Max H. Parke
13 May 2009 Add TTY and 2741 support to 2703 - Jay Maynard, for Max H. Parke
03 May 2009 Disable SENSE ID CCW for 2311, 2314 subject to LEGACYSENSEID setting,
            change 2314 control unit from 2841 to 2314 - Kevin Leonard
27 Apr 2009 Fix scsitape open hang on *nix causing Machine Check - Fish by rbowler
19 Apr 2009 MAXCPU configuration statement - Roger Bowler
19 Apr 2009 CMPSC expand works optimized with absolute addresses - Bernard